<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/meetingNameTab"
                android:layout_width="285dp"
                android:layout_height="62dp"
                android:text=""
                android:textSize="16sp"
                tools:text="Meeting Name" />

            <Button
                android:id="@+id/joinOrLeave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Join/Leave" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/meetingDescriptionTab"
                android:layout_width="284dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text=""
                android:textSize="16sp"
                tools:text="Meeting Description" />

            <Button
                android:id="@+id/back"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="back"
                android:text="Back" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/creator"
                android:layout_width="284dp"
                android:layout_height="match_parent"
                android:text="Creator:" />

            <Button
                android:id="@+id/delete"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="delete"
                android:text="Delete" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/creatorName"
                android:layout_width="286dp"
                android:layout_height="match_parent"
                android:text="TextView" />

            <Button
                android:id="@+id/addFriend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Add Friend" />
        </LinearLayout>

        <TextView
            android:id="@+id/attendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Attendees" />

        <ListView
            android:id="@+id/attendeeList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>