<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toTopOf="@id/profilePic"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/association"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="W"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/interests"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:text="Interests: "
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/association"
        app:layout_constraintTop_toBottomOf="@+id/association"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/age"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="21"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toEndOf="@+id/association"
        app:layout_constraintTop_toTopOf="@+id/association"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="email@usc.edu"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/age"
        app:layout_constraintTop_toTopOf="@+id/association"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/edit"
        android:layout_width="62dp"
        android:layout_height="33dp"
        android:onClick="editProfile"
        android:text="Edit"
        android:textAlignment="center"
        android:textSize="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/friendCount"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:onClick="viewFriends"
        android:text="122 \n Friends"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interests"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/suggestFriends"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Suggest"
        android:textSize="24sp"
        android:onClick="suggestFriends"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friendCount"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/inviteFriends"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Invite"
        android:textSize="24sp"
        android:onClick="invite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friendCount"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createMeeting"
        android:text="Create"
        android:textColor="#F4F4F4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendCount"
        app:layout_constraintVertical_bias="0.063" />

    <ListView
        android:id="@+id/meetings"
        android:layout_width="344dp"
        android:layout_height="394dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>